--- a/templates/result.html
+++ b/templates/result.html
@@ -37,7 +37,7 @@
 
 <body>
 
-    <div><img src="https://clarusway.com/wp-content/uploads/2020/06/clarusway_logo.png" /></div>
+    <div><img src="https://i.pinimg.com/236x/ce/e6/ed/cee6edc990ddf6fa1ef6bb3badb66019--caucasus-mountains-flag.jpg" /></div>
 
     <h2>Project : Roman Numerals Converter Application</h2>
     <br>
